[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.4",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.41.1",
    "wikipedia-api>=0.8.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "branca>=0.8.1",
    "requests>=2.32.3",
]
